add a link to my tiny client to the main page.

--- a/resources/index.html
+++ b/resources/index.html
@@ -44,6 +44,9 @@ All API functions return JSON.
      curl "http://api.clojuredocs.org/see-also/clojure.test/are"
 </code>
 </pre>
+Or check out a <a href="http://github.com/dakrone/cd-client">tiny client</a> for getting Clojure datastructures from the API.
+<br />
+<br />
       </div>
 </body>
 </html>
