reference page update

--- a/resources/index.html
+++ b/resources/index.html
@@ -14,33 +14,38 @@ All API functions return JSON.
 
 <h3>Getting examples</h3>
 
-<pre><code>curl "http://api.clojuredocs.org/examples/clojure.core/map"
-curl "http://api.clojuredocs.org/examples/1.2.0/clojure.core/map"
-</code></pre>
+<pre>
+      curl "http://api.clojuredocs.org/examples/clojure.core/map"
+      curl "http://api.clojuredocs.org/examples/1.2.0/clojure.core/map"
+</pre>
 
 <h3>Searching for a function</h3>
 
-<pre><code>curl "http://api.clojuredocs.org/search/map"
-curl "http://api.clojuredocs.org/search/clojure.core/map"
-</code></pre>
+<pre>
+      curl "http://api.clojuredocs.org/search/map"
+      curl "http://api.clojuredocs.org/search/clojure.core/map"
+</pre>
 
 <h3>Searching for comments on a function</h3>
 
-<pre><code>curl "http://api.clojuredocs.org/comments/clojure.contrib.json/read-json"
-curl "http://api.clojuredocs.org/comments/1.2.0/clojure.contrib.json/read-json"
-</code></pre>
+<pre>
+      curl "http://api.clojuredocs.org/comments/clojure.contrib.json/read-json"
+      curl "http://api.clojuredocs.org/comments/1.2.0/clojure.contrib.json/read-json"
+</pre>
 
 <h3>Getting the 'see-also' functions</h3>
 
-<pre><code>curl "http://api.clojuredocs.org/see-also/clojure.test/are"
-</code></pre>
+<pre>
+      curl "http://api.clojuredocs.org/see-also/clojure.test/are"
+</pre>
 
 <h3>Getting the available versions clojuredocs knows about</h3>
 
-<pre><code>curl "http://api.clojuredocs.org/versions"
-curl "http://api.clojuredocs.org/versions/clojure.core"
-curl "http://api.clojuredocs.org/versions/clojure.core/map"
-</code></pre>
+<pre>
+      curl "http://api.clojuredocs.org/versions"
+      curl "http://api.clojuredocs.org/versions/clojure.core"
+      curl "http://api.clojuredocs.org/versions/clojure.core/map"
+</pre>
 Or check out a <a href="http://github.com/dakrone/cd-client">tiny client</a> for getting Clojure datastructures from the API.
 <br />
 <br />
