update URL in help page

--- a/resources/index.html
+++ b/resources/index.html
@@ -46,7 +46,7 @@ All API functions return JSON.
       curl "http://api.clojuredocs.org/versions/clojure.core"
       curl "http://api.clojuredocs.org/versions/clojure.core/map"
 </pre>
-Or check out a <a href="http://github.com/dakrone/cd-client">tiny client</a> for getting Clojure datastructures from the API.
+Or check out a <a href="http://github.com/dakrone/clojuredocs-client">tiny client</a> for getting Clojure datastructures from the API.
 <br />
 <br />
       </div>
